@@ -76,6 +76,7 @@ Committed Code Changes:
     * Martin's suppress "error(0)" messages for ap_log_error()
     * Ralf's fixes for compiler warnings under AIX 4.2 (NET_SIZE_T is size_t)
     * Ralf's DSO support for AIX
+    * Ralf's DSO support for NetBSD, PR#2158
 
 Available Patches:
 
